--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
     <script src="js/player.js"></script>
 
 
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style/layout.css">
 
 
 </head>
 
 <body class="center " oncontextmenu="return false">
+
+    <input type="file" multiple id="upload" accept="audio/*" />
+
+
+
+
     <div class="row valign-wrapper">
         <div class="col s12" id="player">
-            <audio src="Y2Mate.is - K.Flay - Can't Sleep (The Suicide Squad Soundtrack) (Lyrics)-i2ytsdlM2fs-160k-1634258853024.mp3"></audio>
-            <h1 class="title">I can't sleep</h1>
+            <!--<audio src="Y2Mate.is - K.Flay - Can't Sleep (The Suicide Squad Soundtrack) (Lyrics)-i2ytsdlM2fs-160k-1634258853024.mp3"></audio>
+            -->
+            <h1 class="title"></h1>
             <h2 class="time"></h2>
             <div class="controls">
                 <div class="butons-primary">
@@ -151,12 +158,12 @@
     </div>
 
 
-
-
-
 -->
 
+
+
     <!--JavaScript at end of body for optimized loading-->
+    <script src="js/jquery.js"></script>
     <script src="js/audioPlayer.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="./renderer.js"></script>
